# wechat_bot

./: .env.example  .gitignore  Makefile  pyproject.toml
api/: server.py
apk/: settings.gradle
apk/app/: build.gradle
apk/app/src/main/: AndroidManifest.xml
apk/app/src/main/java/com/wechatbridge/: BridgeWebSocketServer.java  MainActivity.java  WechatAccessibilityService.java
apk/app/src/main/res/values/: strings.xml
apk/app/src/main/res/xml/: accessibility_service_config.xml
config/: loader.py  rules.yaml  schedule.yaml  settings.yaml
core/: adb_bridge.py  waydroid_manager.py  wechat_sender.py  ws_client.py
docs/: PLAN.md  dev_log.md  gewechat_docker_plan.md  real_phone_setup.md  waydroid_setup.md  waydroid_setup.txt
listener/: event_listener.py
router/: message_router.py
router/handlers/: base_handler.py  echo_handler.py  keyword_handler.py  llm_handler.py
scheduler/: push_task.py  task_scheduler.py
scripts/: health_check.sh  install.sh  setup_adb_forward.sh  waydroid_setup.sh
storage/: db.py  models.py
systemd/: wechat-bot.service
templates/: morning_news.jinja2
tests/: conftest.py  test_db.py  test_router.py
tests/fixtures/: accessibility_event_sample.json
utils/: logger.py  session_guard.py
wechat_bot/: __main__.py
