[tool.poetry]
name = "wechat-bot"
version = "0.1.0"
description = "WeChat Bot running on Waydroid + ADB + Accessibility Service"
authors = ["xs"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
uiautomator2 = "^2.16"
adbutils = "^2.7"
apscheduler = "^3.10"
SQLAlchemy = "^2.0"
PyYAML = "^6.0"
Jinja2 = "^3.1"
python-dotenv = "^1.0"
watchdog = "^4.0"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
loguru = "^0.7"
httpx = "^0.27"
tenacity = "^8.3"
anthropic = "^0.34"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-mock = "^3.14"

[tool.poetry.scripts]
wechat-bot = "wechat_bot.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
